Fix alignment and adjust image size

--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,7 @@ nav ul {
 
 .movie-card-rt {
     display: flex;
+    align-items: center;
     gap: 6px;
 }
 
